UI/src/css/global/layout.css
/*
----------------------------------------------------------------------------
Stack.

See https://every-layout.dev/layouts/stack/.
----------------------------------------------------------------------------
*/
.l-stack {
    --stack-gutter: 1em;

    > * + * {
        margin-block-start: var(--stack-gutter);
    }

    > * {
        margin-block-end: 0;
    }
}

/*
----------------------------------------------------------------------------
Row.

Based on https://every-layout.dev/layouts/sidebar/.
----------------------------------------------------------------------------
*/
.l-row {
    /* Number of chars before column2 wraps */
    --column-char-count: min(50ch, 100%);
    --column1-width: 30%;
    --column2-min-width: max(
        var(--column-char-count),
        calc(100% - var(--column1-width) - var(--column-gap))
    );
    --column-gap: calc(var(--space-4) * 2);

    display: flex;
    flex-wrap: wrap;
    gap: var(--column-gap);

    > :first-child {
        flex-basis: var(--column1-width);
        flex-grow: 1;
    }

    > :last-child {
        flex-basis: 0;
        flex-grow: 999;
        min-inline-size: var(--column2-min-width);
    }
}

/*
----------------------------------------------------------------------------
Page.
----------------------------------------------------------------------------
*/
form {
    display: grid;
    gap: var(--space-4);
    grid-template-areas:
        'header'
        'main'
        'footer';
    grid-template-rows: auto 1fr auto;
    margin-inline: auto;
    max-inline-size: var(--page-max-width);
    min-block-size: 100vh;
    min-inline-size: var(--page-min-width);
    padding-inline: 2em;
}

.header {
    grid-area: header;
    min-block-size: var(--header-min-height);
}

.surroundcontent {
    grid-area: main;
}

.footer {
    grid-area: footer;
    min-block-size: var(--footer-min-height);
}

